--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,32 +3,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a345e112",
+   "id": "fba612c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------\n",
-    "# Phase 2: Build Hierarchy\n",
+    "# Phase 2: Build Hierarchy (updated missing-manager tracing)\n",
     "# -------------------------\n",
     "def phase_two(input_file=\"phase1_enriched.xlsx\", output_file=\"hierarchy_report.xlsx\"):\n",
-    "    \"\"\"Build flattened hierarchy with unlimited levels + summary + exceptions (updated missing manager logic).\"\"\"\n",
+    "    \"\"\"Build flattened hierarchy with unlimited levels + summary + exceptions (improved missing-manager tracing).\"\"\"\n",
     "\n",
     "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
     "    enriched.columns = enriched.columns.str.strip()\n",
     "\n",
+    "    # NORMALIZE key columns to strings for reliable matching\n",
+    "    enriched = enriched.copy()\n",
+    "    enriched[EMP_ID_COL] = enriched[EMP_ID_COL].astype(str).str.strip()\n",
+    "    # If MGR_ID_COL not present, create empty column\n",
+    "    if MGR_ID_COL not in enriched.columns:\n",
+    "        enriched[MGR_ID_COL] = \"\"\n",
+    "    else:\n",
+    "        enriched[MGR_ID_COL] = enriched[MGR_ID_COL].astype(str).str.strip()\n",
+    "    # Normalize names and GCB for safety\n",
+    "    enriched[EMP_NAME_COL] = enriched[EMP_NAME_COL].astype(str).str.strip()\n",
+    "    if MGR_NAME_COL in enriched.columns:\n",
+    "        enriched[MGR_NAME_COL] = enriched[MGR_NAME_COL].astype(str).str.strip()\n",
+    "    if GCB_COL in enriched.columns:\n",
+    "        enriched[GCB_COL] = enriched[GCB_COL].astype(str).str.strip().str.upper()\n",
+    "\n",
+    "    # Build lookup using normalized Employee ID\n",
     "    df_lookup = enriched.set_index(EMP_ID_COL)\n",
     "\n",
     "    hierarchy = []\n",
     "    exceptions = []\n",
     "\n",
     "    def recurse(manager_id, path):\n",
-    "        \"\"\"Recursively walk down the hierarchy from a manager.\"\"\"\n",
+    "        \"\"\"Recursively walk down the hierarchy from a manager (manager_id must be normalized string).\"\"\"\n",
+    "        if manager_id is None:\n",
+    "            return\n",
+    "        manager_id = str(manager_id).strip()\n",
     "        reports = enriched[enriched[MGR_ID_COL] == manager_id]\n",
     "        for _, row in reports.iterrows():\n",
     "            record = path.copy()\n",
     "            record.update({\n",
     "                \"Manager ID\": manager_id,\n",
-    "                \"Manager Name\": row[MGR_NAME_COL],\n",
+    "                \"Manager Name\": row.get(MGR_NAME_COL, \"\"),\n",
     "                \"Manager GCB\": df_lookup.loc[manager_id, GCB_COL]\n",
     "                if manager_id in df_lookup.index else None,\n",
     "            })\n",
@@ -39,19 +58,19 @@
     "            # recurse further down\n",
     "            recurse(row[EMP_ID_COL], record)\n",
     "\n",
-    "    # Find all MDs\n",
+    "    # Find all MDs (normalized)\n",
     "    mds = enriched[enriched[GCB_COL] == \"MD\"]\n",
     "    for _, md in mds.iterrows():\n",
     "        md_path = {\"MD ID\": md[EMP_ID_COL], \"MD Name\": md[EMP_NAME_COL]}\n",
     "\n",
-    "        # add MD itself\n",
+    "        # add MD itself (full columns)\n",
     "        row_dict = md.to_dict()\n",
     "        row_dict.update({\n",
     "            \"MD ID\": md[EMP_ID_COL],\n",
     "            \"MD Name\": md[EMP_NAME_COL],\n",
-    "            \"Manager ID\": None,\n",
-    "            \"Manager Name\": None,\n",
-    "            \"Manager GCB\": None,\n",
+    "            \"Manager ID\": \"\",\n",
+    "            \"Manager Name\": \"\",\n",
+    "            \"Manager GCB\": \"\",\n",
     "        })\n",
     "        hierarchy.append(row_dict)\n",
     "\n",
@@ -59,33 +78,69 @@
     "        recurse(md[EMP_ID_COL], md_path)\n",
     "\n",
     "    # ------------------------------\n",
-    "    # Exceptions: missing managers\n",
+    "    # Exceptions: improved missing-manager tracing\n",
     "    # ------------------------------\n",
+    "    # helper: find first missing manager in the upward chain for a given employee row\n",
     "    def find_first_missing_manager(emp_row):\n",
-    "        \"\"\"Traverse upward until MD, return first missing manager if any.\"\"\"\n",
-    "        current_mgr_id = emp_row[MGR_ID_COL]\n",
-    "        while pd.notna(current_mgr_id):\n",
-    "            if current_mgr_id in df_lookup.index:\n",
-    "                mgr_row = df_lookup.loc[current_mgr_id]\n",
-    "                if mgr_row[GCB_COL] == \"MD\":\n",
-    "                    return None  # chain complete\n",
-    "                current_mgr_id = mgr_row[MGR_ID_COL]\n",
-    "            else:\n",
-    "                return current_mgr_id  # first missing manager\n",
-    "        return None\n",
+    "        \"\"\"\n",
+    "        Walk upwards from emp_row[MGR_ID_COL] and:\n",
+    "         - return (missing_mgr_id, missing_mgr_name, chain_str) when first missing manager encountered\n",
+    "         - return (None, None, chain_str) if chain reaches MD (i.e. no missing found)\n",
+    "        \"\"\"\n",
+    "        visited = set()\n",
+    "        chain = []  # collect tuples (id, name_or_empty)\n",
+    "        current_mgr = str(emp_row.get(MGR_ID_COL, \"\")).strip()\n",
     "\n",
+    "        while current_mgr:\n",
+    "            # avoid infinite loops\n",
+    "            if current_mgr in visited:\n",
+    "                chain.append((current_mgr, \"(circular)\"))\n",
+    "                return current_mgr, \"\", \" -> \".join(f\"{i}({n})\" for i, n in chain)\n",
+    "            visited.add(current_mgr)\n",
+    "\n",
+    "            # manager exists in enriched? continue upward\n",
+    "            if current_mgr in df_lookup.index:\n",
+    "                mgr_row = df_lookup.loc[current_mgr]\n",
+    "                mgr_name = str(mgr_row.get(EMP_NAME_COL, \"\")).strip()\n",
+    "                chain.append((current_mgr, mgr_name or \"\"))\n",
+    "                # if this manager is MD, chain completes successfully (no missing)\n",
+    "                mgr_gcb = str(mgr_row.get(GCB_COL, \"\")).strip().upper()\n",
+    "                if mgr_gcb == \"MD\":\n",
+    "                    # build chain string and indicate no missing\n",
+    "                    chain_str = \" -> \".join(f\"{n or i}\" for i, n in chain)\n",
+    "                    return None, None, chain_str\n",
+    "                # move up\n",
+    "                next_mgr = mgr_row.get(MGR_ID_COL, \"\")\n",
+    "                current_mgr = str(next_mgr).strip() if pd.notna(next_mgr) else \"\"\n",
+    "            else:\n",
+    "                # current_mgr is not found in enriched -> this is the first missing manager\n",
+    "                # try to recover a name for this missing manager from any rows that reference them\n",
+    "                # (many employees might have MGR_ID == current_mgr and have the manager's name in MGR_NAME_COL)\n",
+    "                possible_names = enriched.loc[enriched[MGR_ID_COL] == current_mgr, MGR_NAME_COL] \\\n",
+    "                                 if MGR_NAME_COL in enriched.columns else pd.Series([], dtype=object)\n",
+    "                possible_names = possible_names.dropna().astype(str).str.strip()\n",
+    "                missing_name = possible_names.mode().iloc[0] if not possible_names.empty else \"\"\n",
+    "                chain.append((current_mgr, missing_name))\n",
+    "                chain_str = \" -> \".join(f\"{n or i}\" for i, n in chain) + \" (MISSING)\"\n",
+    "                return current_mgr, missing_name, chain_str\n",
+    "\n",
+    "        # if we exit loop without encountering MD or missing (e.g., no manager)\n",
+    "        return None, None, \"No manager chain\"\n",
+    "\n",
+    "    # Apply find_first_missing_manager to every employee row and capture exceptions\n",
     "    for _, row in enriched.iterrows():\n",
-    "        missing_mgr = find_first_missing_manager(row)\n",
-    "        if missing_mgr:\n",
+    "        missing_id, missing_name, chain_str = find_first_missing_manager(row)\n",
+    "        if missing_id:  # found a missing manager somewhere above this employee\n",
     "            row_dict = row.to_dict()\n",
-    "            row_dict[\"Missing Manager ID\"] = missing_mgr\n",
-    "            row_dict[\"Missing Manager Name\"] = row_dict.get(MGR_NAME_COL, \"\")\n",
+    "            row_dict[\"Missing Manager ID\"] = missing_id\n",
+    "            row_dict[\"Missing Manager Name\"] = missing_name\n",
+    "            row_dict[\"Missing Chain\"] = chain_str\n",
     "            exceptions.append(row_dict)\n",
     "\n",
     "    hierarchy_df = pd.DataFrame(hierarchy)\n",
     "    exceptions_df = pd.DataFrame(exceptions)\n",
     "\n",
-    "    # -------- Single consolidated Summary sheet --------\n",
+    "    # -------- Single consolidated Summary sheet (unchanged logic) --------\n",
     "    summary_tables = []\n",
     "\n",
     "    # overall counts\n",
@@ -171,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0843e031",
+   "id": "f37dfdaa",
    "metadata": {},
    "outputs": [],
    "source": [
