--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba612c1",
+   "id": "f2422408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exceptions: employees whose reporting chain breaks because a manager is missing in GHA\n",
+    "all_emp_ids = set(enriched[EMP_ID_COL])\n",
+    "\n",
+    "for _, row in enriched.iterrows():\n",
+    "    if row[GCB_COL] == \"MD\":\n",
+    "        continue  # MDs are top of chain, never exceptions\n",
+    "\n",
+    "    current_mgr_id = row[MGR_ID_COL]\n",
+    "    missing_mgr_id = None\n",
+    "    missing_mgr_name = None\n",
+    "\n",
+    "    # climb upwards until we either reach an MD or find a missing manager\n",
+    "    while pd.notna(current_mgr_id):\n",
+    "        if current_mgr_id not in all_emp_ids:\n",
+    "            missing_mgr_id = current_mgr_id\n",
+    "            missing_mgr_name = row.get(MGR_NAME_COL, None)\n",
+    "            break\n",
+    "\n",
+    "        # move up to this manager’s manager\n",
+    "        mgr_row = enriched.loc[enriched[EMP_ID_COL] == current_mgr_id]\n",
+    "        if mgr_row.empty:\n",
+    "            break\n",
+    "        current_mgr_id = mgr_row.iloc[0][MGR_ID_COL]\n",
+    "\n",
+    "    if missing_mgr_id:\n",
+    "        rec = row.to_dict()\n",
+    "        rec[\"Missing Manager ID\"] = missing_mgr_id\n",
+    "        rec[\"Missing Manager Name\"] = missing_mgr_name\n",
+    "        exceptions.append(rec)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f469ae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f37dfdaa",
+   "id": "39d4fa74",
    "metadata": {},
    "outputs": [],
    "source": [
