--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,45 +3,185 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2422408",
+   "id": "b306289f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exceptions: employees whose reporting chain breaks because a manager is missing in GHA\n",
-    "all_emp_ids = set(enriched[EMP_ID_COL])\n",
+    "# -------------------------\n",
+    "# Phase 2: Build Hierarchy\n",
+    "# -------------------------\n",
+    "def phase_two(input_file=\"phase1_enriched.xlsx\", output_file=\"hierarchy_report.xlsx\"):\n",
+    "    \"\"\"Build flattened hierarchy with unlimited levels + summary + exceptions.\"\"\"\n",
     "\n",
-    "for _, row in enriched.iterrows():\n",
-    "    if row[GCB_COL] == \"MD\":\n",
-    "        continue  # MDs are top of chain, never exceptions\n",
+    "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
+    "    enriched.columns = enriched.columns.str.strip()\n",
     "\n",
-    "    current_mgr_id = row[MGR_ID_COL]\n",
-    "    missing_mgr_id = None\n",
-    "    missing_mgr_name = None\n",
+    "    df_lookup = enriched.set_index(EMP_ID_COL)\n",
     "\n",
-    "    # climb upwards until we either reach an MD or find a missing manager\n",
-    "    while pd.notna(current_mgr_id):\n",
-    "        if current_mgr_id not in all_emp_ids:\n",
-    "            missing_mgr_id = current_mgr_id\n",
-    "            missing_mgr_name = row.get(MGR_NAME_COL, None)\n",
-    "            break\n",
+    "    hierarchy = []\n",
+    "    exceptions = []\n",
     "\n",
-    "        # move up to this manager’s manager\n",
-    "        mgr_row = enriched.loc[enriched[EMP_ID_COL] == current_mgr_id]\n",
-    "        if mgr_row.empty:\n",
-    "            break\n",
-    "        current_mgr_id = mgr_row.iloc[0][MGR_ID_COL]\n",
+    "    def recurse(manager_id, path):\n",
+    "        \"\"\"Recursively walk down the hierarchy from a manager.\"\"\"\n",
+    "        reports = enriched[enriched[MGR_ID_COL] == manager_id]\n",
+    "        for _, row in reports.iterrows():\n",
+    "            record = path.copy()\n",
+    "            record.update({\n",
+    "                \"Manager ID\": manager_id,\n",
+    "                \"Manager Name\": row[MGR_NAME_COL],\n",
+    "                \"Manager GCB\": df_lookup.loc[manager_id, GCB_COL]\n",
+    "                if manager_id in df_lookup.index else None,\n",
+    "            })\n",
+    "            # keep ALL columns from enriched\n",
+    "            record.update(row.to_dict())\n",
+    "            hierarchy.append(record)\n",
     "\n",
-    "    if missing_mgr_id:\n",
-    "        rec = row.to_dict()\n",
-    "        rec[\"Missing Manager ID\"] = missing_mgr_id\n",
-    "        rec[\"Missing Manager Name\"] = missing_mgr_name\n",
-    "        exceptions.append(rec)\n"
+    "            # recurse further down\n",
+    "            recurse(row[EMP_ID_COL], record)\n",
+    "\n",
+    "    # Find all MDs\n",
+    "    mds = enriched[enriched[GCB_COL] == \"MD\"]\n",
+    "    for _, md in mds.iterrows():\n",
+    "        md_path = {\"MD ID\": md[EMP_ID_COL], \"MD Name\": md[EMP_NAME_COL]}\n",
+    "\n",
+    "        # add MD itself\n",
+    "        row_dict = md.to_dict()\n",
+    "        row_dict.update({\n",
+    "            \"MD ID\": md[EMP_ID_COL],\n",
+    "            \"MD Name\": md[EMP_NAME_COL],\n",
+    "            \"Manager ID\": None,\n",
+    "            \"Manager Name\": None,\n",
+    "            \"Manager GCB\": None,\n",
+    "        })\n",
+    "        hierarchy.append(row_dict)\n",
+    "\n",
+    "        # recurse into MD’s reports\n",
+    "        recurse(md[EMP_ID_COL], md_path)\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # Exceptions: trace up the chain until first missing manager is found\n",
+    "    # -------------------------------\n",
+    "    all_emp_ids = set(enriched[EMP_ID_COL])\n",
+    "\n",
+    "    for _, row in enriched.iterrows():\n",
+    "        if row[GCB_COL] == \"MD\":\n",
+    "            continue  # MDs are top, never exceptions\n",
+    "\n",
+    "        current_mgr_id = row[MGR_ID_COL]\n",
+    "        missing_mgr_id = None\n",
+    "        missing_mgr_name = None\n",
+    "\n",
+    "        # climb upwards until we either reach MD or hit a missing manager\n",
+    "        while pd.notna(current_mgr_id):\n",
+    "            if current_mgr_id not in all_emp_ids:\n",
+    "                missing_mgr_id = current_mgr_id\n",
+    "                # take the manager name field from this row (the direct manager not found)\n",
+    "                missing_mgr_name = row.get(MGR_NAME_COL, None)\n",
+    "                break\n",
+    "\n",
+    "            # move to next manager in chain\n",
+    "            mgr_row = enriched.loc[enriched[EMP_ID_COL] == current_mgr_id]\n",
+    "            if mgr_row.empty:\n",
+    "                break\n",
+    "            current_mgr_id = mgr_row.iloc[0][MGR_ID_COL]\n",
+    "\n",
+    "        if missing_mgr_id:\n",
+    "            rec = row.to_dict()\n",
+    "            rec[\"Missing Manager ID\"] = missing_mgr_id\n",
+    "            rec[\"Missing Manager Name\"] = missing_mgr_name\n",
+    "            exceptions.append(rec)\n",
+    "\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
+    "    exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "    # -------- Single consolidated Summary sheet --------\n",
+    "    summary_tables = []\n",
+    "\n",
+    "    # overall counts\n",
+    "    summary = pd.DataFrame([{\n",
+    "        \"Metric\": \"Total Employees\", \"Value\": len(enriched)\n",
+    "    }, {\n",
+    "        \"Metric\": \"Total in Hierarchy\", \"Value\": hierarchy_df[EMP_ID_COL].nunique()\n",
+    "    }, {\n",
+    "        \"Metric\": \"Missing Managers Count\", \"Value\": len(exceptions_df)\n",
+    "    }])\n",
+    "    summary_tables.append((\"Overall Summary\", summary))\n",
+    "\n",
+    "    # per-MD\n",
+    "    per_md = hierarchy_df.groupby(\"MD Name\")[EMP_ID_COL].nunique().reset_index()\n",
+    "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
+    "    summary_tables.append((\"Headcount per MD\", per_md))\n",
+    "\n",
+    "    # ---- Prepare a safe manager-name map from enriched (string keys) ----\n",
+    "    manager_name_map = {}\n",
+    "    if EMP_ID_COL in enriched.columns and EMP_NAME_COL in enriched.columns:\n",
+    "        mgr_df = enriched[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates().copy()\n",
+    "        mgr_df[EMP_ID_COL] = mgr_df[EMP_ID_COL].astype(str).str.strip()\n",
+    "        mgr_df[EMP_NAME_COL] = mgr_df[EMP_NAME_COL].astype(str).str.strip()\n",
+    "        manager_name_map = mgr_df.set_index(EMP_ID_COL)[EMP_NAME_COL].to_dict()\n",
+    "\n",
+    "    # Make sure Manager GCB column exists in hierarchy_df (if not, create safe NA column)\n",
+    "    if \"Manager GCB\" not in hierarchy_df.columns:\n",
+    "        hierarchy_df[\"Manager GCB\"] = pd.NA\n",
+    "\n",
+    "    # Convert Manager GCB to numeric where possible for correct matching (coerce errors)\n",
+    "    mgr_gcb_numeric = pd.to_numeric(hierarchy_df[\"Manager GCB\"], errors=\"coerce\")\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # Per-GCB3: direct report counts\n",
+    "    # -------------------------------\n",
+    "    per_gcb3_counts = (\n",
+    "        hierarchy_df.loc[mgr_gcb_numeric == 3]\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "        .nunique()\n",
+    "        .reset_index(name=\"Direct Reports\")\n",
+    "    )\n",
+    "    per_gcb3_counts[\"Manager ID\"] = per_gcb3_counts[\"Manager ID\"].astype(str).str.strip()\n",
+    "    per_gcb3_counts[\"GCB3 Name\"] = per_gcb3_counts[\"Manager ID\"].map(manager_name_map).fillna(\"\")\n",
+    "    per_gcb3 = per_gcb3_counts[[\"GCB3 Name\", \"Manager ID\", \"Direct Reports\"]].copy()\n",
+    "    per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # Per-GCB4: direct report counts\n",
+    "    # -------------------------------\n",
+    "    per_gcb4_counts = (\n",
+    "        hierarchy_df.loc[mgr_gcb_numeric == 4]\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "        .nunique()\n",
+    "        .reset_index(name=\"Direct Reports\")\n",
+    "    )\n",
+    "    per_gcb4_counts[\"Manager ID\"] = per_gcb4_counts[\"Manager ID\"].astype(str).str.strip()\n",
+    "    per_gcb4_counts[\"GCB4 Name\"] = per_gcb4_counts[\"Manager ID\"].map(manager_name_map).fillna(\"\")\n",
+    "    per_gcb4 = per_gcb4_counts[[\"GCB4 Name\", \"Manager ID\", \"Direct Reports\"]].copy()\n",
+    "    per_gcb4.columns = [\"GCB4 Name\", \"GCB4 ID\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB4\", per_gcb4))\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # WRITE OUTPUT (Hierarchy + Missing Managers + ONE Summary sheet stacked)\n",
+    "    # -------------------------------\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "        # Write all summaries stacked in one sheet with title rows\n",
+    "        start_row = 0\n",
+    "        for title, df in summary_tables:\n",
+    "            pd.DataFrame([[title]]).to_excel(writer, index=False, header=False,\n",
+    "                                             sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += 1\n",
+    "            df.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += len(df) + 2\n",
+    "\n",
+    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "    return hierarchy_df, exceptions_df\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f469ae9",
+   "id": "8f93da45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d4fa74",
+   "id": "8e48cdef",
    "metadata": {},
    "outputs": [],
    "source": [
