--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,281 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b306289f",
+   "id": "e9b5a854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------\n",
+    "# Phase 2: Build Hierarchy (fixed missing-manager name resolution)\n",
+    "# -------------------------\n",
+    "def phase_two(input_file=\"phase1_enriched.xlsx\", output_file=\"hierarchy_report.xlsx\"):\n",
+    "    \"\"\"Build flattened hierarchy with unlimited levels + summary + exceptions.\"\"\"\n",
+    "\n",
+    "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
+    "    enriched.columns = enriched.columns.str.strip()\n",
+    "\n",
+    "    # Normalize ID/name columns as strings for robust matching\n",
+    "    enriched = enriched.copy()\n",
+    "    if EMP_ID_COL in enriched.columns:\n",
+    "        enriched[EMP_ID_COL] = enriched[EMP_ID_COL].astype(str).str.strip()\n",
+    "    if MGR_ID_COL in enriched.columns:\n",
+    "        enriched[MGR_ID_COL] = enriched[MGR_ID_COL].astype(str).str.strip()\n",
+    "    if EMP_NAME_COL in enriched.columns:\n",
+    "        enriched[EMP_NAME_COL] = enriched[EMP_NAME_COL].astype(str).str.strip()\n",
+    "    if MGR_NAME_COL in enriched.columns:\n",
+    "        enriched[MGR_NAME_COL] = enriched[MGR_NAME_COL].astype(str).str.strip()\n",
+    "    if GCB_COL in enriched.columns:\n",
+    "        enriched[GCB_COL] = enriched[GCB_COL].astype(str).str.strip().str.upper()\n",
+    "\n",
+    "    # Build a DataFrame lookup and a deduplicated map for safe access\n",
+    "    df_lookup = enriched.set_index(EMP_ID_COL)\n",
+    "\n",
+    "    hierarchy = []\n",
+    "    exceptions = []\n",
+    "\n",
+    "    # helper to safely get a single row (Series) for an employee id (handles duplicates)\n",
+    "    def get_emp_row(emp_id):\n",
+    "        \"\"\"Return a Series for emp_id if present, else None. Handles duplicate index by returning first row.\"\"\"\n",
+    "        try:\n",
+    "            row = df_lookup.loc[emp_id]\n",
+    "        except KeyError:\n",
+    "            return None\n",
+    "        # if multiple rows returned (DataFrame), take first\n",
+    "        if isinstance(row, pd.DataFrame):\n",
+    "            return row.iloc[0]\n",
+    "        return row\n",
+    "\n",
+    "    def recurse(manager_id, path):\n",
+    "        \"\"\"Recursively walk down the hierarchy from a manager.\"\"\"\n",
+    "        if pd.isna(manager_id) or manager_id == \"\":\n",
+    "            return\n",
+    "        reports = enriched[enriched[MGR_ID_COL] == manager_id]\n",
+    "        for _, row in reports.iterrows():\n",
+    "            record = path.copy()\n",
+    "            record.update({\n",
+    "                \"Manager ID\": manager_id,\n",
+    "                \"Manager Name\": row.get(MGR_NAME_COL, \"\"),\n",
+    "                \"Manager GCB\": get_emp_row(manager_id)[GCB_COL]\n",
+    "                if get_emp_row(manager_id) is not None else None,\n",
+    "            })\n",
+    "            # keep ALL columns from enriched\n",
+    "            record.update(row.to_dict())\n",
+    "            hierarchy.append(record)\n",
+    "\n",
+    "            # recurse further down\n",
+    "            recurse(row[EMP_ID_COL], record)\n",
+    "\n",
+    "    # Find all MDs\n",
+    "    mds = enriched[enriched[GCB_COL] == \"MD\"]\n",
+    "    for _, md in mds.iterrows():\n",
+    "        md_path = {\"MD ID\": md[EMP_ID_COL], \"MD Name\": md[EMP_NAME_COL]}\n",
+    "\n",
+    "        # add MD itself\n",
+    "        row_dict = md.to_dict()\n",
+    "        row_dict.update({\n",
+    "            \"MD ID\": md[EMP_ID_COL],\n",
+    "            \"MD Name\": md[EMP_NAME_COL],\n",
+    "            \"Manager ID\": None,\n",
+    "            \"Manager Name\": None,\n",
+    "            \"Manager GCB\": None,\n",
+    "        })\n",
+    "        hierarchy.append(row_dict)\n",
+    "\n",
+    "        # recurse into MD’s reports\n",
+    "        recurse(md[EMP_ID_COL], md_path)\n",
+    "\n",
+    "    # ------------------------------\n",
+    "    # Exceptions: improved missing-manager tracing + proper missing manager name lookup\n",
+    "    # ------------------------------\n",
+    "    # build set of all known employee ids (strings)\n",
+    "    all_emp_ids = set(enriched[EMP_ID_COL].astype(str).tolist())\n",
+    "\n",
+    "    # helper to resolve missing manager name for a missing manager id:\n",
+    "    def resolve_missing_manager_name(missing_mgr_id):\n",
+    "        \"\"\"\n",
+    "        Try multiple ways to find a name for missing_mgr_id:\n",
+    "         1) If missing_mgr_id appears as an Employee ID (unexpected here) use employee name.\n",
+    "         2) Else, look for rows where MGR_ID_COL == missing_mgr_id and extract the MGR_NAME_COL values\n",
+    "            (these are subordinate rows that often carry the manager name).\n",
+    "         3) Else, return empty string.\n",
+    "        \"\"\"\n",
+    "        missing_mgr_id = str(missing_mgr_id).strip()\n",
+    "        # 1) check if present as an employee (rare, since missing means not in all_emp_ids)\n",
+    "        emp_row = get_emp_row(missing_mgr_id)\n",
+    "        if emp_row is not None:\n",
+    "            return str(emp_row.get(EMP_NAME_COL, \"\")).strip()\n",
+    "\n",
+    "        # 2) look for subordinates that reference this manager id and read the manager name field\n",
+    "        if MGR_NAME_COL in enriched.columns:\n",
+    "            candidate_names = enriched.loc[enriched[MGR_ID_COL] == missing_mgr_id, MGR_NAME_COL] \\\n",
+    "                .dropna().astype(str).str.strip()\n",
+    "            if not candidate_names.empty:\n",
+    "                # return most common (mode) name if available, else first\n",
+    "                try:\n",
+    "                    mode_name = candidate_names.mode()\n",
+    "                    if not mode_name.empty:\n",
+    "                        return mode_name.iloc[0]\n",
+    "                except Exception:\n",
+    "                    pass\n",
+    "                return candidate_names.iloc[0]\n",
+    "        # 3) nothing found\n",
+    "        return \"\"\n",
+    "\n",
+    "    # For each employee row, walk up until MD or until first missing manager ID encountered\n",
+    "    for _, row in enriched.iterrows():\n",
+    "        # skip MDs\n",
+    "        if str(row.get(GCB_COL, \"\")).strip().upper() == \"MD\":\n",
+    "            continue\n",
+    "\n",
+    "        current_mgr_id = str(row.get(MGR_ID_COL, \"\")).strip()\n",
+    "        missing_mgr_id = None\n",
+    "        missing_mgr_name = \"\"\n",
+    "        chain_parts = []  # for optional trace like \"A -> B -> C (MISSING)\"\n",
+    "\n",
+    "        # If no manager id present at all, treat as missing immediately\n",
+    "        if current_mgr_id == \"\" or pd.isna(current_mgr_id):\n",
+    "            missing_mgr_id = current_mgr_id\n",
+    "            missing_mgr_name = row.get(MGR_NAME_COL, \"\") or \"\"\n",
+    "        else:\n",
+    "            # climb upwards until MD or missing manager\n",
+    "            visited = set()\n",
+    "            while current_mgr_id:\n",
+    "                # protect from infinite loops\n",
+    "                if current_mgr_id in visited:\n",
+    "                    # circularity - mark as missing (use current_mgr_id)\n",
+    "                    missing_mgr_id = current_mgr_id\n",
+    "                    missing_mgr_name = resolve_missing_manager_name(current_mgr_id)\n",
+    "                    chain_parts.append(f\"{missing_mgr_name or missing_mgr_id} (CIRCULAR)\")\n",
+    "                    break\n",
+    "                visited.add(current_mgr_id)\n",
+    "\n",
+    "                chain_parts.append(current_mgr_id)\n",
+    "\n",
+    "                # if manager id not found in enriched -> this is the first missing manager\n",
+    "                if current_mgr_id not in all_emp_ids:\n",
+    "                    missing_mgr_id = current_mgr_id\n",
+    "                    missing_mgr_name = resolve_missing_manager_name(current_mgr_id)\n",
+    "                    chain_parts[-1] = f\"{missing_mgr_name or missing_mgr_id} (MISSING)\"\n",
+    "                    break\n",
+    "\n",
+    "                # otherwise get manager row and move up\n",
+    "                mgr_row = get_emp_row(current_mgr_id)\n",
+    "                if mgr_row is None:\n",
+    "                    # should not happen (we checked membership), but safe-break\n",
+    "                    missing_mgr_id = current_mgr_id\n",
+    "                    missing_mgr_name = resolve_missing_manager_name(current_mgr_id)\n",
+    "                    break\n",
+    "\n",
+    "                mgr_gcb = str(mgr_row.get(GCB_COL, \"\")).strip().upper()\n",
+    "                # if this manager is MD, chain completes successfully\n",
+    "                if mgr_gcb == \"MD\":\n",
+    "                    missing_mgr_id = None\n",
+    "                    missing_mgr_name = \"\"\n",
+    "                    break\n",
+    "\n",
+    "                # else continue up\n",
+    "                next_mgr = mgr_row.get(MGR_ID_COL, \"\")\n",
+    "                current_mgr_id = str(next_mgr).strip() if pd.notna(next_mgr) else \"\"\n",
+    "            # end while\n",
+    "\n",
+    "        if missing_mgr_id:\n",
+    "            rec = row.to_dict()\n",
+    "            rec[\"Missing Manager ID\"] = missing_mgr_id\n",
+    "            rec[\"Missing Manager Name\"] = missing_mgr_name\n",
+    "            rec[\"Missing Chain\"] = \" -> \".join(chain_parts)\n",
+    "            exceptions.append(rec)\n",
+    "\n",
+    "    # Convert to DataFrames\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
+    "    exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "    # -------- Single consolidated Summary sheet --------\n",
+    "    summary_tables = []\n",
+    "\n",
+    "    # overall counts\n",
+    "    summary = pd.DataFrame([{\n",
+    "        \"Metric\": \"Total Employees\", \"Value\": len(enriched)\n",
+    "    }, {\n",
+    "        \"Metric\": \"Total in Hierarchy\", \"Value\": hierarchy_df[EMP_ID_COL].nunique()\n",
+    "    }, {\n",
+    "        \"Metric\": \"Missing Managers Count\", \"Value\": len(exceptions_df)\n",
+    "    }])\n",
+    "    summary_tables.append((\"Overall Summary\", summary))\n",
+    "\n",
+    "    # per-MD\n",
+    "    per_md = hierarchy_df.groupby(\"MD Name\")[EMP_ID_COL].nunique().reset_index()\n",
+    "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
+    "    summary_tables.append((\"Headcount per MD\", per_md))\n",
+    "\n",
+    "    # ---- Prepare a safe manager-name map from enriched (string keys) ----\n",
+    "    manager_name_map = {}\n",
+    "    if EMP_ID_COL in enriched.columns and EMP_NAME_COL in enriched.columns:\n",
+    "        mgr_df = enriched[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates().copy()\n",
+    "        mgr_df[EMP_ID_COL] = mgr_df[EMP_ID_COL].astype(str).str.strip()\n",
+    "        mgr_df[EMP_NAME_COL] = mgr_df[EMP_NAME_COL].astype(str).str.strip()\n",
+    "        manager_name_map = mgr_df.set_index(EMP_ID_COL)[EMP_NAME_COL].to_dict()\n",
+    "\n",
+    "    # Ensure Manager GCB column exists\n",
+    "    if \"Manager GCB\" not in hierarchy_df.columns:\n",
+    "        hierarchy_df[\"Manager GCB\"] = pd.NA\n",
+    "\n",
+    "    mgr_gcb_numeric = pd.to_numeric(hierarchy_df[\"Manager GCB\"], errors=\"coerce\")\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # Per-GCB3 direct report counts\n",
+    "    # -------------------------------\n",
+    "    per_gcb3_counts = (\n",
+    "        hierarchy_df.loc[mgr_gcb_numeric == 3]\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "        .nunique()\n",
+    "        .reset_index(name=\"Direct Reports\")\n",
+    "    )\n",
+    "    per_gcb3_counts[\"Manager ID\"] = per_gcb3_counts[\"Manager ID\"].astype(str).str.strip()\n",
+    "    per_gcb3_counts[\"GCB3 Name\"] = per_gcb3_counts[\"Manager ID\"].map(manager_name_map).fillna(\"\")\n",
+    "    per_gcb3 = per_gcb3_counts[[\"GCB3 Name\", \"Manager ID\", \"Direct Reports\"]].copy()\n",
+    "    per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # Per-GCB4 direct report counts\n",
+    "    # -------------------------------\n",
+    "    per_gcb4_counts = (\n",
+    "        hierarchy_df.loc[mgr_gcb_numeric == 4]\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "        .nunique()\n",
+    "        .reset_index(name=\"Direct Reports\")\n",
+    "    )\n",
+    "    per_gcb4_counts[\"Manager ID\"] = per_gcb4_counts[\"Manager ID\"].astype(str).str.strip()\n",
+    "    per_gcb4_counts[\"GCB4 Name\"] = per_gcb4_counts[\"Manager ID\"].map(manager_name_map).fillna(\"\")\n",
+    "    per_gcb4 = per_gcb4_counts[[\"GCB4 Name\", \"Manager ID\", \"Direct Reports\"]].copy()\n",
+    "    per_gcb4.columns = [\"GCB4 Name\", \"GCB4 ID\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB4\", per_gcb4))\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # WRITE OUTPUT (Hierarchy + Missing Managers + ONE Summary sheet stacked)\n",
+    "    # -------------------------------\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "        # Write all summaries stacked in one sheet with title rows\n",
+    "        start_row = 0\n",
+    "        for title, df in summary_tables:\n",
+    "            pd.DataFrame([[title]]).to_excel(writer, index=False, header=False,\n",
+    "                                             sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += 1\n",
+    "            df.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += len(df) + 2\n",
+    "\n",
+    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "    return hierarchy_df, exceptions_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfbbf5da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f93da45",
+   "id": "7d32870b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e48cdef",
+   "id": "1f1fe463",
    "metadata": {},
    "outputs": [],
    "source": [
