--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,168 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db7b054d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import tkinter as tk\n",
+    "from tkinter import ttk, filedialog, messagebox\n",
+    "import os\n",
+    "\n",
+    "# ----------------------------\n",
+    "# Constants (from Phase 1/2)\n",
+    "# ----------------------------\n",
+    "EMP_ID_COL = \"Employee ID\"\n",
+    "EMP_NAME_COL = \"Employee Name\"\n",
+    "EMP_EMAIL_COL = \"Employee Business Email Address\"\n",
+    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
+    "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "\n",
+    "# ----------------------------\n",
+    "# Function to recursively get all reports\n",
+    "# ----------------------------\n",
+    "def get_all_reports(df, manager_id):\n",
+    "    \"\"\"Return all employees reporting directly or indirectly to manager_id\"\"\"\n",
+    "    reports_list = []\n",
+    "\n",
+    "    def recurse(mgr_id):\n",
+    "        subs = df[df[MGR_ID_COL] == mgr_id]\n",
+    "        for _, row in subs.iterrows():\n",
+    "            reports_list.append(row.to_dict())\n",
+    "            recurse(row[EMP_ID_COL])\n",
+    "\n",
+    "    recurse(manager_id)\n",
+    "    return pd.DataFrame(reports_list)\n",
+    "\n",
+    "# ----------------------------\n",
+    "# Function to export slice for a manager\n",
+    "# ----------------------------\n",
+    "def export_slice(df, manager_name, manager_id, outdir):\n",
+    "    subset_df = get_all_reports(df, manager_id)\n",
+    "    # Include manager record itself\n",
+    "    mgr_record = df[df[EMP_ID_COL] == manager_id]\n",
+    "    final_df = pd.concat([mgr_record, subset_df], ignore_index=True)\n",
+    "\n",
+    "    # Summary calculations\n",
+    "    total_emp = len(final_df)\n",
+    "    gcb3_count = len(final_df[final_df[GCB_COL] == 3])\n",
+    "    gcb4_count = len(final_df[final_df[GCB_COL] == 4])\n",
+    "    per_gcb3 = final_df[final_df[GCB_COL] == 3].groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
+    "    per_gcb3.columns = [\"GCB3 Name\", \"Direct Reports\"]\n",
+    "    per_gcb4 = final_df[final_df[GCB_COL] == 4].groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
+    "    per_gcb4.columns = [\"GCB4 Name\", \"Direct Reports\"]\n",
+    "\n",
+    "    # Save to Excel\n",
+    "    out_file = os.path.join(outdir, f\"{manager_name}_{manager_id}_slice.xlsx\")\n",
+    "    with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "        final_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
+    "        # Summary stacked\n",
+    "        start_row = 0\n",
+    "        summary_tables = [\n",
+    "            (\"Summary\", pd.DataFrame([{\"Metric\": \"Manager Name\", \"Value\": manager_name},\n",
+    "                                      {\"Metric\": \"Manager ID\", \"Value\": manager_id},\n",
+    "                                      {\"Metric\": \"Total Employees\", \"Value\": total_emp},\n",
+    "                                      {\"Metric\": \"GCB3 Count\", \"Value\": gcb3_count},\n",
+    "                                      {\"Metric\": \"GCB4 Count\", \"Value\": gcb4_count}])),\n",
+    "            (\"GCB3 Details\", per_gcb3),\n",
+    "            (\"GCB4 Details\", per_gcb4)\n",
+    "        ]\n",
+    "        for title, df_table in summary_tables:\n",
+    "            pd.DataFrame([[title]]).to_excel(writer, index=False, header=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += 1\n",
+    "            df_table.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += len(df_table) + 2\n",
+    "    print(f\"✅ Slice saved → {out_file}\")\n",
+    "\n",
+    "# ----------------------------\n",
+    "# GUI Function\n",
+    "# ----------------------------\n",
+    "def run_phase3_gui():\n",
+    "    # Load hierarchy file\n",
+    "    file_path = filedialog.askopenfilename(title=\"Select Hierarchy Report file\",\n",
+    "                                           filetypes=[(\"Excel files\", \"*.xlsx\")])\n",
+    "    if not file_path:\n",
+    "        return\n",
+    "\n",
+    "    df = pd.read_excel(file_path, sheet_name=\"Hierarchy Report\")\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "\n",
+    "    root = tk.Tk()\n",
+    "    root.title(\"Phase 3 - Hierarchy Slice Utility\")\n",
+    "\n",
+    "    tk.Label(root, text=\"Select Manager Name:\").grid(row=0, column=0, padx=10, pady=5, sticky=\"w\")\n",
+    "\n",
+    "    # Unique manager names from Entity Manager column\n",
+    "    mgr_names = sorted(df[MGR_NAME_COL].dropna().unique())\n",
+    "    manager_var = tk.StringVar()\n",
+    "    mgr_cb = ttk.Combobox(root, state=\"readonly\", values=mgr_names, textvariable=manager_var)\n",
+    "    mgr_cb.grid(row=0, column=1, padx=5, pady=5)\n",
+    "\n",
+    "    tk.Label(root, text=\"Select GCB Level for 'Generate All':\").grid(row=0, column=2, padx=10, pady=5, sticky=\"w\")\n",
+    "    level_var = tk.StringVar()\n",
+    "    level_cb = ttk.Combobox(root, state=\"readonly\", values=[3,4,5,6,7,8], textvariable=level_var)\n",
+    "    level_cb.grid(row=0, column=3, padx=5, pady=5)\n",
+    "    level_cb.current(0)\n",
+    "\n",
+    "    # Output folder selection\n",
+    "    tk.Label(root, text=\"Output Folder:\").grid(row=1, column=0, padx=10, pady=5, sticky=\"w\")\n",
+    "    outdir_var = tk.StringVar()\n",
+    "    outdir_entry = tk.Entry(root, textvariable=outdir_var, width=50)\n",
+    "    outdir_entry.grid(row=1, column=1, padx=5, pady=5, columnspan=2)\n",
+    "\n",
+    "    def browse_folder():\n",
+    "        folder_selected = filedialog.askdirectory()\n",
+    "        if folder_selected:\n",
+    "            outdir_var.set(folder_selected)\n",
+    "    tk.Button(root, text=\"Browse\", command=browse_folder).grid(row=1, column=3, padx=5, pady=5)\n",
+    "\n",
+    "    # Action buttons\n",
+    "    def generate_single():\n",
+    "        mgr_name = manager_var.get()\n",
+    "        if not mgr_name:\n",
+    "            messagebox.showwarning(\"Warning\", \"Please select a manager name\")\n",
+    "            return\n",
+    "        # Get all IDs for that name\n",
+    "        mgr_ids = df[df[MGR_NAME_COL]==mgr_name][EMP_ID_COL].unique()\n",
+    "        if len(mgr_ids) >1:\n",
+    "            # If multiple IDs, ask which one\n",
+    "            id_win = tk.Toplevel(root)\n",
+    "            id_win.title(f\"Select ID for {mgr_name}\")\n",
+    "            tk.Label(id_win, text=f\"Select Manager ID for {mgr_name}:\").pack(padx=10, pady=5)\n",
+    "            id_var = tk.StringVar()\n",
+    "            id_cb = ttk.Combobox(id_win, values=mgr_ids, textvariable=id_var)\n",
+    "            id_cb.pack(padx=10, pady=5)\n",
+    "            def select_id():\n",
+    "                export_slice(df, mgr_name, id_var.get(), outdir_var.get())\n",
+    "                id_win.destroy()\n",
+    "            tk.Button(id_win, text=\"Generate Slice\", command=select_id).pack(padx=10, pady=10)\n",
+    "        else:\n",
+    "            export_slice(df, mgr_name, mgr_ids[0], outdir_var.get())\n",
+    "\n",
+    "    def generate_all():\n",
+    "        level = int(level_var.get())\n",
+    "        outdir = outdir_var.get()\n",
+    "        managers = df[df[GCB_COL]==level][[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates()\n",
+    "        for _, row in managers.iterrows():\n",
+    "            export_slice(df, row[EMP_NAME_COL], row[EMP_ID_COL], outdir)\n",
+    "\n",
+    "    tk.Button(root, text=\"Generate Slice for Selected Manager\", command=generate_single).grid(row=2, column=0, padx=10, pady=10)\n",
+    "    tk.Button(root, text=\"Generate Slices for All at Level\", command=generate_all).grid(row=2, column=1, padx=10, pady=10)\n",
+    "\n",
+    "    root.mainloop()\n",
+    "\n",
+    "# ----------------------------\n",
+    "# Run Phase 3 GUI\n",
+    "# ----------------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    run_phase3_gui()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e9b5a854",
    "metadata": {},
    "outputs": [],
